deploy/raw-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eps
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
